--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -2,7 +2,7 @@
 $main-font-family: 'RUBuntu', 'Arial', 'Helvetica', sans-serif;
 $main-font-size: 1.6rem; // html font-size is set to 62.5% or 10px by default. So main font-size is 16px in rems
 $main-line-height: 1.2;
-$title-font-family: 'Museo Sans', 'Arial', 'Helvetica', sans-serif;
+$title-font-family: 'MuseoSans', 'RUBuntu', 'Arial', 'Helvetica', sans-serif;
 
 // Media queries (min-width)
 $xl-desktop-min-width: 1600px;
