--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,6 +17,7 @@
 @use 'blocks/reusable/container';
 @use 'blocks/reusable/custom-checkbox';
 @use 'blocks/reusable/dropdown';
+@use 'blocks/reusable/heading';
 @use 'blocks/reusable/inline-icon';
 @use 'blocks/reusable/input-with-button';
 @use 'blocks/reusable/link';
@@ -29,9 +30,15 @@
 @use 'blocks/reusable/tooltip';
 @use 'blocks/reusable/underline';
 
+@use 'blocks/page/page';
+
 @use 'blocks/header/page-header';
 @use 'blocks/header/phones-list';
 @use 'blocks/header/main-screen';
 
 @use 'blocks/menu/main-menu';
 @use 'blocks/menu/submenu';
+
+@use 'blocks/application-form/application-form';
+
+@use 'blocks/footer/page-footer';
