--- a/src/assets/scss/blocks/header/main-screen.scss
+++ b/src/assets/scss/blocks/header/main-screen.scss
@@ -1,48 +1,6 @@
 @use '../../tools' as *;
 
 .main-screen {
-  padding-top: 35rem;
-
-  @include themify() {
-    background-color: $color-background;
-
-    @if ($header-image-2 != null) {
-      background-image:
-        #{url(map-deep-get($header-image-1, 'small', '1x'))},
-        #{url(map-deep-get($header-image-2, 'small', '1x'))};
-      background-position:
-        left top 4.5rem,
-        right top 4.5rem;
-
-      @include retina() {
-        background-image:
-          #{url(map-deep-get($header-image-1, 'small', '2x'))},
-          #{url(map-deep-get($header-image-2, 'small', '2x'))};
-      }
-
-      @include retina(3) {
-        background-image:
-          #{url(map-deep-get($header-image-1, 'small', '3x'))},
-          #{url(map-deep-get($header-image-2, 'small', '3x'))};
-      }
-    }
-    @else {
-      background-image: #{url(map-deep-get($header-image-1, 'small', '1x'))};
-      background-position: right top 4.5rem;
-
-      @include retina() {
-        background-image: #{url(map-deep-get($header-image-1, 'small', '2x'))};
-      }
-
-      @include retina(3) {
-        background-image: #{url(map-deep-get($header-image-1, 'small', '3x'))};
-      }
-    }
-  }
-
-  background-repeat: no-repeat;
-  background-size: auto 35rem;
-
   &__content {
     text-align: center;
 
@@ -50,7 +8,7 @@
   }
 
   &__heading {
-    padding: 3rem 2rem;
+    padding: 3.5rem 2rem;
   }
 
   &__title,
@@ -62,6 +20,7 @@
   &__title {
     margin-bottom: 2rem;
 
+    font-weight: 400;
     font-size: 2.4rem;
   }
 
@@ -71,46 +30,41 @@
     font-size: 1.8rem;
   }
 
-  &__features-list {
-    @include reset-list();
-
+  &__features {
     position: relative;
 
-    display: flex;
-    flex-direction: column;
-    margin-top: calc(6rem + 9%);
+    margin-top: 2rem;
     padding-bottom: 7rem;
+  }
 
-    @include themify() {
+  @include themify() {
+    &__features-list {
       background-color: $color-background;
     }
 
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
+    &__wave {
+      fill: $color-background;
+    }
+  }
 
-      width: 100%;
+  &__features-list {
+    @include reset-list();
 
-      background-repeat: no-repeat;
-      background-size: cover;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__wave {
+    @include box(100%, auto);
+
+    display: block;
+
+    &_top {
+      margin-bottom: -1px;
     }
 
-    &::before {
-      bottom: 100%;
-
-      padding-bottom: 21%;
-
-      background-image: url('../../../img/main-screen/main/wave_top.svg');
-    }
-
-    &::after {
-      top: 100%;
-
-      padding-bottom: 16%;
-
-      background-image: url('../../../img/main-screen/main/wave_bottom.svg');
+    &_bottom {
+      margin-top: -1px;
     }
   }
 
@@ -118,7 +72,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 6rem;
+    margin-bottom: 5.5rem;
   }
 
   &__feature-main-text {
@@ -137,19 +91,29 @@
   &__subtitle {
     display: block;
   }
+
+  &__title {
+    font-weight: 700;
+  }
 }
 
 @media (min-width: $tablet-min-width) {
   .main-screen {
-    padding-top: 15rem;
+    padding-top: 22rem;
 
-    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: auto 60rem;
 
     @include themify() {
+      background-color: $color-background;
+
       @if ($header-image-2 != null) {
         background-image:
           #{url(map-deep-get($header-image-1, 'normal', '1x'))},
           #{url(map-deep-get($header-image-2, 'normal', '1x'))};
+        background-position:
+          left top 4.5rem,
+          right top 4.5rem;
 
         @include retina() {
           background-image:
@@ -159,6 +123,7 @@
       }
       @else {
         background-image: #{url(map-deep-get($header-image-1, 'normal', '1x'))};
+        background-position: right top 4.5rem;
 
         @include retina() {
           background-image: #{url(map-deep-get($header-image-1, 'normal', '2x'))};
@@ -166,8 +131,17 @@
       }
     }
 
+    &__heading {
+      @include centered-block(60%);
+    }
+
+    &__title,
     &__subtitle {
-      font-size: 2.4rem;
+      font-size: 2.2rem;
+    }
+
+    &__subtitle {
+      padding: 0 5rem;
     }
 
     &__content,
@@ -175,14 +149,16 @@
       background: none;
     }
 
+    &__features {
+      margin-top: 10rem;
+      padding-top: 5rem;
+
+      background-color: $alt-default-color;
+    }
+
     &__features-list {
       flex-direction: row;
       justify-content: center;
-
-      &::before,
-      &::after {
-        content: none;
-      }
     }
 
     &__feature-item {
@@ -199,27 +175,16 @@
 
 @media (min-width: $s-desktop-min-width) {
   .main-screen {
-    padding-top: 8vw;
-    padding-bottom: 4vw;
-
-    @include themify() {
-      @if ($header-image-2 != null) {
-        background-position:
-          left top,
-          right top;
-      }
-      @else {
-        padding-right: 10rem;
-
-        background-position: right top;
-      }
-    }
+    padding-top: 9vw;
+    padding-bottom: 6vw;
 
     &__content {
       @include centered-block(100rem);
     }
 
     &__heading {
+      max-width: 75%;
+
       line-height: 1.2;
     }
 
@@ -228,29 +193,84 @@
       font-size: 3.2rem;
     }
 
-    &__title {
-      margin-bottom: 0;
+    &__features {
+      margin-top: 3vw;
+      padding: 0;
+
+      background: none;
     }
 
     &__features-list {
-      margin-top: 3vw;
-      padding-bottom: 0;
+      margin: 0;
     }
+  }
+
+  .page .main-screen {
+    background-position-y: top;
+    background-size: contain;
+  }
+
+  .index-page .main-screen {
+    background-position:
+      left -20px top,
+      right top;
   }
 }
 
 @media (min-width: $desktop-min-width) {
   .main-screen {
-    padding-top: 10rem;
-    padding-bottom: 5rem;
+    padding-bottom: 8vw;
 
-    &__features-list {
-      margin-top: 6rem;
+    &__heading {
+      max-width: initial;
+
+      line-height: 1.3;
+    }
+
+    &__title,
+    &__subtitle {
+      font-size: calc(1rem + 1.6vw);
+    }
+
+    &__title {
+      margin-bottom: 0;
+    }
+
+    &__features {
+      margin-top: 3vw;
     }
 
     &__feature-item {
       margin-right: 4.5rem;
       margin-left: 4.5rem;
+    }
+
+    &__feature-main-text {
+      font-size: 3.6vw;
+    }
+  }
+}
+
+@media (min-width: $l-desktop-min-width) {
+  .main-screen {
+    padding-top: 12rem;
+    padding-bottom: 14rem;
+
+    &__title,
+    &__subtitle {
+      font-size: 3.4rem;
+    }
+
+    &__subtitle {
+      padding: 0;
+    }
+
+    &__features {
+      margin-top: 6rem;
+    }
+
+    &__feature-main-text {
+      font-size: 5.4rem;
     }
   }
 }
