--- a/src/assets/scss/blocks/menu/main-menu.scss
+++ b/src/assets/scss/blocks/menu/main-menu.scss
@@ -1,19 +1,148 @@
 @use '../../tools' as *;
 
 .main-menu {
+  position: fixed;
+  top: 5.5rem;
+  left: 0;
+  z-index: -1;
+
+  display: none;
+  overflow: hidden;
+  overflow-y: auto;
+  width: 100%;
+  //noinspection CssInvalidPropertyValue
+  height: stretch;
+
+  background-color: $alt-default-color;
+
+  &.animated {
+    animation-duration: 0.6s;
+  }
+
   &__list {
-    @include horizontal-list();
+    list-style: none;
+    padding: 3rem 18vw;
+    padding-bottom: 6rem;
+
+    .main-menu__additional {
+      display: none;
+    }
   }
 
   &__list-item {
-    font-size: 1.4rem;
+    margin-bottom: 2.5rem;
+
+    font-size: 1.6rem;
+
+    &.dropdown {
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+}
+
+@media (min-width: $tablet-min-width) {
+  .main-menu {
+    @include box(auto);
+
+    position: static;
+
+    overflow: visible;
+    display: block;
+
+    border-top: none;
+
+    &__list {
+      @include horizontal-list();
+
+      margin-left: 1rem;
+    }
+
+    &__list-item {
+      margin-right: 3vw;
+      margin-bottom: 0;
+
+      font-size: 1.4rem;
+
+      &.dropdown {
+        &:focus-within {
+          outline: none;
+
+          .dropdown__body {
+            display: block;
+          }
+        }
+      }
+
+      @media (max-width: 890px) {
+        &_hidden {
+          display: none;
+        }
+      }
+    }
+
+    @media (max-width: 890px) {
+      .main-menu__additional {
+        display: inline-block;
+      }
+    }
+
+    .dropdown__trigger {
+      &::before {
+        top: 0.2em;
+      }
+    }
+
+    &__submenu {
+      top: 4.5rem;
+      left: auto;
+
+      width: calc(100vw - 4.2rem);
+
+      transform: none;
+    }
+
+    &__hidden-list {
+      @include reset-list();
+
+      top: 2.5rem;
+
+      min-width: 12rem;
+      padding: 1rem 2rem;
+
+      text-align: center;
+
+      &::before {
+        @include box(100%, 0.5rem);
+
+        content: '';
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+      }
+    }
+
+    &__hidden-item {
+      margin-bottom: 0.8rem;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
   }
 }
 
 @media (min-width: $s-desktop-min-width) {
   .main-menu {
+    background: none;
+
+    &__list {
+      margin-left: 0;
+    }
+
     &__list-item {
-      margin: 0 1vw;
+      margin: 0 0.8vw;
 
       font-size: 1.6rem;
 
@@ -23,9 +152,11 @@
     }
 
     &__submenu {
-      right: 4vw;
-      left: 4vw;
+      top: auto;
+      right: 1vw;
+      left: 1vw;
 
+      width: auto;
       margin-top: 2.5rem;
 
       transform: none;
@@ -33,11 +164,21 @@
   }
 }
 
+@media (min-width: $desktop-min-width) {
+  .main-menu {
+    &__list-item {
+      font-size: 1.5rem;
+    }
+  }
+}
+
 @media (min-width: $l-desktop-min-width) {
   .main-menu {
     &__list-item {
-      margin-right: 1.5rem;
-      margin-left: 1.5rem;
+      margin-right: 1rem;
+      margin-left: 1rem;
+
+      font-size: 1.6rem;
     }
   }
 }
